adjusted focus styling to ensure button stays readable and consistent in style

--- a/assets/custom-button.scss
+++ b/assets/custom-button.scss
@@ -30,4 +30,9 @@
         border-width: 2px;
     }
 
+    &:focus {
+        background-color: #6b54c07c;
+        color: black;
+    }
+
 }
